# piir

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README.md  ac.c  autogen.sh  config.c  config.h  config.h.in  configure  configure.ac  hvac_panasonic_jke.c  irslinger.c  irslinger.h  log.c  log.h  symboldefinition.h
conf/remotes/: hvac_panasonic.json
conf/remotes/hvac/: panasonic_jke.json
config/remotes/hvac/: panasonic_jke.json
src/: ac.c  config.c  config.h  hvac_panasonic_jke.c  hvac_panasonic_plugin.c  hvac_panasonic_plugin.h  irgeneric.h  irslinger.c  irslinger.h  log.h  piir.c  transmitter.c  transmitter.h
